# my_pytest_project

./: .coverage  pyproject.toml  pytest.ini  report.html
stuff/: accum.py
tests/: test_accum.py  test_api.py  test_e2e.py  test_math.py
